Commented out scrollify due to jerkiness when scrolling down. FIxed issue with intro section copy overlapping logo

--- a/css/style.css
+++ b/css/style.css
@@ -183,6 +183,9 @@ img.team-images{width: 100%;}
 	.contact-card{width: 85%;}
 }
 
+@media (max-height: 600px) {
+	.intro-copy {position: relative; margin-top: 160px; padding-bottom: 64px;}
+}
 
 /**pagination**/
 
